# template-advent-of-code

./: .gitignore  LICENSE  README.md  advent-of-code.cabal  aoc-hs  aoc-hs.sh  hie.yaml  new-day-gen.sh
solutions/: day-1.hs
